# oryx-forge-api-20250824

./: .gitignore  CLAUDE.md  Makefile  README.md  TESTING.md  claude-error.md  claude-instructions.md  pyproject.toml  run_tests.bat
.claude/: CLAUDE.md  CLAUDE2.md  claude-data-analyst.md  claude0.md
.claude/agents/: data-analyst.md  intent-prep.md
.claude/agents-e2e-no-good/: CLAUDE1.md  CLAUDE3.md  data-analyst.md  data-analyst1.md  intent-prep.md  intent-prep0.md  intent-prep1.md
api/: Dockerfile  IMPORT_ENDPOINT_README.md  app.py  cfg.py  example_usage.py  requirements.txt
api/devops/: Dockerfile  deploy-gcp.sh  requirements-gcp-run.txt  run-local.sh
api/services/: README.md  file_service.py
api/tests/: README.md  README_INTEGRATION_TESTS.md  conftest.py  pytest.ini  requirements-test.txt  run_integration_tests.py  run_tests.py  test-cfg.yaml  test_file_service.py  test_file_service_integration.py  test_files.py  test_llm.py
bak/: bak-chat_service-openai-intent.py  bak-file_service-2025-10-07.py  bak-gcs_service.py  mcp_server0.py  test-mount2.py  test-mount3.py
devops/: config.md  create-supabase-20250824.sql  init-supabase-20250824.py  publish-gcs.md  publish-local.md  publish-pypi.md  rclone.conf  rclone.md
docs/: admin-cli.md  cli-commands.md  io-service-agent-guide.md  mcp-cli.md  oryxforge-cli-commands.md
docs/planning/: fastapi_vs_django_comparison.md  local_dev_environment.md
docs/system/: ARCHITECTURE.md  architecture_evaluation_2025.html  architecture_evaluation_2025.md  context_mgmt.md  integration_test_strategy_2025.md
docs/user/: oryxforge-cli-commands.md
examples/: admin_workflow.sh  quick_start.sh
mcp-server-roadmap/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
mcp-server-roadmap/handlers/: __init__.py  code_generation_handler.py  data_processing_handler.py  file_handler.py
oryxforge/: __init__.py
oryxforge/agents/: claude.py
oryxforge/cli/: __init__.py  admin.py  agent.py  dev.py  main.py  utils.py
oryxforge/prompts/: templates.cfg  templates.toml
oryxforge/services/: __init__.py  chat_service.py  cli_service.py  config_service.py  df_service.py  env_config.py  iam.py  import_service.py  io_service.py  project_service.py  repo_service.py  task_service.py  utils.py  workflow_service.py
oryxforge/tests/: README.md  conftest.py  test_chat_service.py  test_claude_agent.py  test_cli_service.py  test_config.py  test_iam.py  test_import_service.py  test_io_service.py  test_mcp.py  test_project_service.py  test_repo_service.py  test_services.py  test_workflow_service.py
oryxforge/tools/: __init__.py  langchain.py  mcp.py  mcp_oryxforge.py  mcp_oryxforge2.py  mcp_server.py
tasks/: __init__.py
tests/: test_tools.py
utest/: api20250828.py  api20250908.py  api20251014.py
utest-oryxforge/utest-20250906/: run_gen.py
utest-oryxforge/utest-20250906/tasks/: test1.py
utest/prompts/: claude-code-20250904.txt
