[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oryxforge"
version = "25.9.8"
description = "Task management and workflow orchestration library with MCP support"
readme = "README.md"
license = {text = "Commercial"}
authors = [
    {name = "Oryx Intelligence LLC", email = "dev@oryxintel.com"},
]
maintainers = [
    {name = "Oryx Intelligence LLC", email = "dev@oryxintel.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "workflow",
    "task-management",
    "data-pipeline",
    "mcp",
    "d6tflow",
]
requires-python = ">=3.12"
dependencies = [
    "d6tflow>=1.0.0",
    "pandas>=1.3.0",
    "loguru>=0.5.0",
    "python-gitlab",
    "claude-agent-sdk",
    "jinja2>=3.0.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "adtiam"
]

[project.urls]
Homepage = "https://github.com/oryxforge/oryxforge"
Documentation = "https://docs.oryxforge.dev"
Repository = "https://github.com/oryxforge/oryxforge.git"
"Bug Tracker" = "https://github.com/oryxforge/oryxforge/issues"
Changelog = "https://github.com/oryxforge/oryxforge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# CLI support
cli = [
    "click>=8.0.0",
]

# MCP server support (includes CLI)
mcp-server = [
    "oryxforge[cli]",
    "fastmcp>=0.1.0",
    "pygit2>=1.13.0",
]

# Development dependencies
dev = [
    "oryxforge[mcp-server]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

# All optional dependencies
all = [
    "oryxforge[cli,mcp-server]",
]

[project.scripts]
oryxforge = "oryxforge.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["oryxforge*"]
exclude = ["tests*", "docs*", "temp*", "utest*", "api*", "mcp-server-roadmap*"]

[tool.setuptools.package-data]
oryxforge = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | temp
  | utest
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "d6tflow.*",
    "pandas.*", 
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as async"
]
addopts = [
    "--cov=oryxforge",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["oryxforge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]